Rename project from talk-to-history to historical-figures-chat inside package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "talk-to-history",
+    "name": "historical-figures-chat",
     "description": "This website allows you to talk to historical figures.",
     "scripts": {
         "start": "vite",
